// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> should render a form 1`] = `
<form>
  <Input
    name="testInput"
    type="text"
  />
</form>
`;

exports[`<Form /> should render with an onChange and onSubmit attributes if handleChange are handleSubmit are passed in 1`] = `
<form
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    }
  }
  onSubmit={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    }
  }
>
  <Input
    name="testInput"
    type="text"
  />
</form>
`;
